--- a/_layouts/fe.html
+++ b/_layouts/fe.html
@@ -6,9 +6,9 @@
     <title>
         {{ page.title }}
     </title>
-    <link href="/resource/fe/global.css" rel="stylesheet">
-    <link href="/resource/fe/common.css" rel="stylesheet">
-    <script src="/resource/fe/modernizr.foundation.min.js"></script>
+    <link href="/docs/resource/fe/global.css" rel="stylesheet">
+    <link href="/docs/resource/fe/common.css" rel="stylesheet">
+    <script src="/docs/resource/fe/modernizr.foundation.min.js"></script>
     {{ page.extcss }}
 </head>
 <body>
@@ -105,8 +105,8 @@
     </div>
 </div>
 
-<script src="/resource/fe/global.js"></script>
-<script src="/resource/fe/prettify.js"></script>
+<script src="/docs/resource/fe/global.js"></script>
+<script src="/docs/resource/fe/prettify.js"></script>
 
 <script>
     (function(){
