--- a/_layouts/fe.html
+++ b/_layouts/fe.html
@@ -6,9 +6,9 @@
     <title>
         {{ page.title }}
     </title>
-    <link href="/docs/resource/fe/global.css" rel="stylesheet">
-    <link href="/docs/resource/fe/common.css" rel="stylesheet">
-    <script src="/docs/resource/fe/modernizr.foundation.min.js"></script>
+    <link href="resource/global.css" rel="stylesheet">
+    <link href="resource/common.css" rel="stylesheet">
+    <script src="resource/modernizr.foundation.min.js"></script>
     {{ page.extcss }}
 </head>
 <body>
@@ -29,10 +29,10 @@
             <a href="#">UI组件</a>
             <a href="#" class="flyout-toggle"><span> </span></a>
             <ul class="flyout" style="display: none;">
-                <li><a href="index.php?doc=dialog">弹出层</a></li>
-                <li><a href="index.php?doc=tips">提示框</a></li>
-                <li><a href="index.php?doc=formvalidator">表单验证</a></li>
-                <li><a href="index.php?doc=ajax">异步提交</a></li>
+                <li><a href="dialog.html">弹出层</a></li>
+                <li><a href="tips.html">提示框</a></li>
+                <li><a href="formvalidator.html">表单验证</a></li>
+                <li><a href="ajax.html">异步提交</a></li>
             </ul>
         </li>
 
@@ -40,9 +40,9 @@
             <a href="#">库</a>
             <a href="#" class="flyout-toggle"><span> </span></a>
             <ul class="flyout" style="display: none;">
-                <li><a href="index.php?doc=baidutemplate">baiduTemplate</a></li>
-                <li><a href="index.php?doc=echarts">echarts</a></li>
-                <li><a href="index.php?doc=unslider">unslider</a></li>
+                <li><a href="baidutemplate.html">baiduTemplate</a></li>
+                <li><a href="echarts.html">echarts</a></li>
+                <li><a href="unslider.html">unslider</a></li>
             </ul>
         </li>
 
@@ -50,7 +50,7 @@
             <a href="#">文档</a>
             <a href="#" class="flyout-toggle"><span> </span></a>
             <ul class="flyout" style="display: none;">
-                <li><a href="index.php?doc=specification">规范</a></li>
+                <li><a href="specification.html">规范</a></li>
             </ul>
         </li>
 
@@ -105,8 +105,8 @@
     </div>
 </div>
 
-<script src="/docs/resource/fe/global.js"></script>
-<script src="/docs/resource/fe/prettify.js"></script>
+<script src="resource/global.js"></script>
+<script src="resource/prettify.js"></script>
 
 <script>
     (function(){
