add_github_link

--- a/_layouts/fe.html
+++ b/_layouts/fe.html
@@ -54,6 +54,10 @@
             </ul>
         </li>
 
+        <li>
+            <a href="https://github.com/iotofcmcc/docs">View On Github</a>
+        </li>
+
     </ul>
 </div>
 
