add_onnet_domain

--- a/_layouts/fe.html
+++ b/_layouts/fe.html
@@ -71,14 +71,14 @@
         <ul class="ft-list unstyled clearfix">
             <li>
                 <h4>关于平台</h4>
-                <p><a href="/index/join">登录/马上接入</a></p>
-                <p><a href="/solution/traffic">解决方案</a></p>
-                <p><a href="/platform/intro">OneNET平台</a></p>
+                <p><a href="http://open.iot.10086.cn/index/join">登录/马上接入</a></p>
+                <p><a href="http://open.iot.10086.cn/solution/traffic">解决方案</a></p>
+                <p><a href="http://open.iot.10086.cn/platform/intro">OneNET平台</a></p>
             </li>
             <li>
                 <h4>支持</h4>
-                <p><a href="/develop/doc/api/restfullist">API文档</a></p>
-                <p><a href="/develop/doc/api/restfullist">接入SDK</a></p>
+                <p><a href="http://open.iot.10086.cn/develop/doc/api/restfullist">API文档</a></p>
+                <p><a href="http://open.iot.10086.cn/develop/doc/api/restfullist">接入SDK</a></p>
             </li>
             <li>
                 <h4>友情链接</h4>
@@ -96,9 +96,7 @@
         <div class="ft-logo"></div>
         <div class="ft-extend">
             <p>
-                <a href="/platform/intro">关于OneNET</a>
-                <a href="#">隐私政策</a>
-                <a href="#">免责声明</a>
+                <a href="http://open.iot.10086.cn/platform/intro">关于OneNET</a>
                 <a href="mailto:onenet_service@iot.chinamobile.com">联系我们</a>
             </p>
             <p>
