--- a/_layouts/fe.html
+++ b/_layouts/fe.html
@@ -47,10 +47,13 @@
         </li>
 
         <li class="has-flyout">
-            <a href="#">文档</a>
+            <a href="#">文档和规范</a>
             <a href="#" class="flyout-toggle"><span> </span></a>
             <ul class="flyout" style="display: none;">
-                <li><a href="specification.html">规范</a></li>
+                <li><a href="specification-js.html">javascript</a></li>
+                <li><a href="specification-css.html">css</a></li>
+                <li><a href="specification-html.html">html</a></li>
+                <li><a href="specification-smarty.html">smarty</a></li>
             </ul>
         </li>
 
