Update the icon font.

--- a/_layouts/fe.html
+++ b/_layouts/fe.html
@@ -8,6 +8,7 @@
     </title>
     <link href="resource/global.css" rel="stylesheet">
     <link href="resource/common.css" rel="stylesheet">
+    <link href="resource/fontello.css" rel="stylesheet">
     <script src="resource/modernizr.foundation.min.js"></script>
     {{ page.extcss }}
 </head>
