--- a/_layouts/fe.html
+++ b/_layouts/fe.html
@@ -9,7 +9,6 @@
     <link href="resource/global.css" rel="stylesheet">
     <link href="resource/common.css" rel="stylesheet">
     <link href="resource/fontello.css" rel="stylesheet">
-    <script src="resource/modernizr.foundation.min.js"></script>
     {{ page.extcss }}
 </head>
 <body>
@@ -20,7 +19,7 @@
         <li class="has-flyout">
             <a href="#">样式</a>
             <a href="#" class="flyout-toggle"><span> </span></a>
-            <ul class="flyout" style="display: none;">
+            <ul class="flyout">
                 <li><a href="button.html">按钮</a></li>
                 <li><a href="fontello.html">字体图标</a></li>
             </ul>
@@ -29,7 +28,7 @@
         <li class="has-flyout">
             <a href="#">UI组件</a>
             <a href="#" class="flyout-toggle"><span> </span></a>
-            <ul class="flyout" style="display: none;">
+            <ul class="flyout">
                 <li><a href="dialog.html">弹出层</a></li>
                 <li><a href="tips.html">提示框</a></li>
                 <li><a href="formvalidator.html">表单验证</a></li>
@@ -40,7 +39,7 @@
         <li class="has-flyout">
             <a href="#">库</a>
             <a href="#" class="flyout-toggle"><span> </span></a>
-            <ul class="flyout" style="display: none;">
+            <ul class="flyout">
                 <li><a href="baidutemplate.html">baiduTemplate</a></li>
                 <li><a href="echarts.html">echarts</a></li>
                 <li><a href="unslider.html">unslider</a></li>
@@ -50,7 +49,7 @@
         <li class="has-flyout">
             <a href="#">文档和规范</a>
             <a href="#" class="flyout-toggle"><span> </span></a>
-            <ul class="flyout" style="display: none;">
+            <ul class="flyout">
                 <li><a href="specification-js.html">javascript</a></li>
                 <li><a href="specification-css.html">css</a></li>
                 <li><a href="specification-html.html">html</a></li>
@@ -69,48 +68,6 @@
 <div id="main" class="grid doc-detail">
     {{ content }}
 </div>
-
-<div class="footer">
-    <div class="grid">
-        <ul class="ft-list unstyled clearfix">
-            <li>
-                <h4>关于平台</h4>
-                <p><a href="http://open.iot.10086.cn/index/join">登录/马上接入</a></p>
-                <p><a href="http://open.iot.10086.cn/solution/traffic">解决方案</a></p>
-                <p><a href="http://open.iot.10086.cn/platform/intro">OneNET平台</a></p>
-            </li>
-            <li>
-                <h4>支持</h4>
-                <p><a href="http://open.iot.10086.cn/develop/doc/api/restfullist">API文档</a></p>
-                <p><a href="http://open.iot.10086.cn/develop/doc/api/restfullist">接入SDK</a></p>
-            </li>
-            <li>
-                <h4>友情链接</h4>
-                <p><a target="_blank" href="http://iot.10086.cn/">中移物联网</a></p>
-                <p><a target="_blank" href="http://iot.10086.cn/2013-12-20/1387367454797.html">物联网专网</a></p>
-                <p><a target="_blank" href="http://www.koostore.com/">酷店</a></p>
-            </li>
-            <li>
-                <h4>联系我们</h4>
-                <p><a href="mailto:onenet_service@iot.chinamobile.com"><i class="icon-mail"></i>onenet_service@iot.chinamobile.com</a></p>
-                <p><a href="http://j.map.baidu.com/RyXtk" target="_blank"><i class="icon-location"></i>重庆市南岸区玉马路8号</a></p>
-            </li>
-
-        </ul>
-        <div class="ft-logo"></div>
-        <div class="ft-extend">
-            <p>
-                <a href="http://open.iot.10086.cn/platform/intro">关于OneNET</a>
-                <a href="mailto:onenet_service@iot.chinamobile.com">联系我们</a>
-            </p>
-            <p>
-                中移物联网有限公司 版权所有 Copyright(c)2014 www.heclouds.com
-                渝ICP备13005647号-6
-            </p>
-        </div>
-    </div>
-</div>
-
 <script src="resource/global.js"></script>
 <script src="resource/prettify.js"></script>
 
