--- a/_fe/resource/global.css
+++ b/_fe/resource/global.css
@@ -1,581 +1,1 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-/* Don't kill focus outline for keyboard users: http://24ways.org/2009/dont-lose-your-focus */
-a:hover,
-a:active {
-  outline: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-.button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  cursor: pointer;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: normal;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  background-color: #cc334c;
-  color: #fff;
-  border-width: 0;
-  padding: 0.9em 3em;
-}
-input {
-  border-radius: 0;
-  background-color: #fff;
-  border: 1px solid #808080;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  padding: 0.8em;
-  -webkit-transition: 'border-color 0.15s linear, background 0.15s linear';
-  -moz-transition: 'border-color 0.15s linear, background 0.15s linear';
-  -o-transition: 'border-color 0.15s linear, background 0.15s linear';
-  transition: 'border-color 0.15s linear, background 0.15s linear';
-}
-input:focus {
-  background: #fafafa;
-  border-color: #999;
-  outline: none;
-}
-@font-face {
-  font-family: 'fontello';
-  src: url('/common/css/fontello.eot?36072971');
-  src: url('/common/css/fontello.eot?36072971#iefix') format('embedded-opentype'), url('/common/css/fontello.woff?36072971') format('woff'), url('/common/css/fontello.ttf?36072971') format('truetype'), url('/common/css/fontello.svg?36072971#fontello') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-/*
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'fontello';
-    src: url('../css/fontello.svg?55404948#fontello') format('svg');
-  }
-  }
-}
-*/
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-  font-family: "fontello";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  /* opacity: .8; */
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-}
-.animate-spin {
-  -moz-animation: spin 5s infinite linear;
-  -o-animation: spin 5s infinite linear;
-  -webkit-animation: spin 5s infinite linear;
-  animation: spin 5s infinite linear;
-  display: inline-block;
-}
-@-moz-keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -moz-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-@-webkit-keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -moz-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-@-o-keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -moz-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-@-ms-keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -moz-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-@keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -moz-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-.icon-cab:before {
-  content: '\e800';
-}
-/* '' */
-.icon-home-outline:before {
-  content: '\e801';
-}
-/* '' */
-.icon-tools:before {
-  content: '\e802';
-}
-/* '' */
-.icon-user:before {
-  content: '\e803';
-}
-/* '' */
-.icon-mail:before {
-  content: '\e804';
-}
-/* '' */
-.icon-right-open:before {
-  content: '\e805';
-}
-/* '' */
-.icon-attention-circled:before {
-  content: '\e806';
-}
-/* '' */
-.icon-location-outline:before {
-  content: '\e807';
-}
-/* '' */
-.icon-search:before {
-  content: '\e808';
-}
-/* '' */
-.icon-pencil:before {
-  content: '\e809';
-}
-/* '' */
-.icon-trash-empty:before {
-  content: '\e80a';
-}
-/* '' */
-.icon-spin5:before {
-  content: '\e80b';
-}
-/* '' */
-.icon-file-excel:before {
-  content: '\e80c';
-}
-/* '' */
-.icon-ok-circled:before {
-  content: '\e80d';
-}
-/* '' */
-.icon-user-1:before {
-  content: '\e80e';
-}
-/* '' */
-.icon-lock-1:before {
-  content: '\e80f';
-}
-/* '' */
-.icon-clock:before {
-  content: '\e810';
-}
-/* '' */
-div.alert-box-pop {
-  position: fixed;
-  left: 50%;
-  padding-right: 15px;
-  font-weight: normal;
-  opacity: .9;
-  z-index: 5000;
-}
-/*
-    翻页控件
-*/
-.ui-pager ul {
-  margin: 30px 0;
-  list-style: none;
-  display: inline-block;
-  overflow: hidden;
-  border-left: 1px solid #DDD;
-  *display: inline;
-  /* IE7 inline-block hack */
-  *zoom: 1;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-}
-.ui-pager ul li {
-  display: inline;
-}
-.ui-pager ul li a {
-  float: left;
-  padding: 5px 12px;
-  line-height: 20px;
-  color: #333;
-  border: 1px solid #ddd;
-  border-left: 0;
-}
-.ui-pager ul li.active a,
-.ui-pager ul li.disabled a {
-  color: #9d9f9c;
-  cursor: default;
-  background: #f5f5f5;
-  text-decoration: none;
-}
-/************************************Public**************************************/
-body {
-  font-family: 'Microsoft YaHei', sans-serif;
-  background-color: rgba(255, 255, 255, 0.95);
-}
-body a {
-  font-size: 14px;
-  text-decoration: none;
-  color: #333;
-}
-body a:hover {
-  color: #e63939;
-}
-.e5 {
-  color: #e5e5e5;
-}
-.grid {
-  width: 1185px;
-  margin: 0 auto;
-  *zoom: 1;
-}
-.grid:before,
-.grid:after {
-  display: table;
-  line-height: 0;
-  content: "";
-}
-.grid:after {
-  clear: both;
-}
-.clearfix {
-  *zoom: 1;
-}
-.clearfix:before,
-.clearfix:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-.clearfix:after {
-  clear: both;
-}
-.tl {
-  text-align: left;
-}
-.tc {
-  text-align: center;
-}
-.tr {
-  text-align: right;
-}
-.bc {
-  margin-left: auto;
-  margin-right: auto;
-}
-.fl {
-  float: left;
-  display: inline;
-}
-.fr {
-  float: right;
-  display: inline;
-}
-.cb {
-  clear: both;
-}
-.cl {
-  clear: left;
-}
-.cr {
-  clear: right;
-}
-.vm {
-  vertical-align: middle;
-}
-.pr {
-  position: relative;
-}
-.pa {
-  position: absolute;
-}
-.abs-right {
-  position: absolute;
-  right: 0;
-}
-.zoom {
-  zoom: 1;
-}
-.hide {
-  display: none;
-}
-.hidden {
-  visibility: hidden;
-}
-.none {
-  display: none;
-}
-/************************************Header**************************************/
-.header {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-.header .h-top {
-  height: 50px;
-  line-height: 50px;
-}
-.header .h-top .logo {
-  background: url("/static/common/img/logo.png") 0 11px no-repeat;
-  width: 126px;
-  height: 50px;
-  display: block;
-}
-.header .h-top .info .search .po-img {
-  left: -28px;
-  top: 5px;
-  position: relative;
-  cursor: pointer;
-}
-.header .h-top .info .search input {
-  padding: 0;
-  border: 0;
-  height: 32px;
-  width: 0;
-  outline: none;
-  background-color: #f0f0f0;
-}
-.header .h-top .info .contact,
-.header .h-top .info .register,
-.header .h-top .info .login {
-  display: block;
-  padding: 0 15px;
-}
-/************************************footer**************************************/
-.footer {
-  background-color: #2e3133;
-  height: 420px;
-}
-.footer .f-info ul .mr260 {
-  margin-right: 260px;
-}
-.footer .f-info ul .mr100 {
-  margin-right: 100px;
-}
-.footer .f-info ul .mb15 {
-  margin-bottom: 15px;
-}
-.footer .f-info ul li {
-  float: left;
-  width: 160px;
-  margin-top: 70px;
-}
-.footer .f-info ul li h3 {
-  color: #b3b3b3;
-  font-weight: normal;
-  font-size: 18px;
-}
-.footer .f-info ul li .u-l-red {
-  width: 34px;
-  height: 3px;
-  background-color: #e63939;
-  margin-top: 10px;
-  margin-bottom: 30px;
-}
-.footer .f-info ul li p a {
-  color: #666;
-}
-.footer .f-info ul li p a:hover {
-  color: #fff;
-  text-decoration: underline;
-}
-.footer .f-line {
-  margin-top: 80px;
-}
-.footer .f-logo {
-  text-align: center;
-  position: relative;
-  top: -20px;
-}
-.footer .f-signature {
-  text-align: center;
-  color: #666;
-  font-size: 14px;
-}
-.footer .f-signature span {
-  margin-right: 10px;
-}
-.footer .f-signature a {
-  color: #666;
-}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,main,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}a:hover,a:active{outline:0}table{border-collapse:collapse;border-spacing:0}.button{-webkit-appearance:none;-moz-appearance:none;cursor:pointer;font-weight:400;font-size:16px;line-height:normal;text-align:center;text-decoration:none;display:inline-block;background-color:#cc334c;color:#fff;border-width:0;padding:.9em 3em}.ui-dialog-mask{display:none;position:fixed;_position:absolute;top:0;right:0;bottom:0;left:0;z-index:490;background-color:#888;opacity:.5;filter:alpha(opacity=50);width:100%}.ui-dialog-pop{position:fixed;_position:absolute;top:50%;left:50%;z-index:500;background-color:#fff;border:1px solid #999;border:1px solid rgba(0,0,0,.3);-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;-webkit-box-shadow:0 3px 7px rgba(0,0,0,.3);-moz-box-shadow:0 3px 7px rgba(0,0,0,.3);box-shadow:0 3px 7px rgba(0,0,0,.3);outline:0}.ui-dialog-pop .ui-dialog-hd{font-size:18px;padding:0 15px;line-height:40px;position:relative;font-style:normal}.ui-dialog-pop .ui-dialog-bd{margin:20px}.ui-dialog-pop .ui-dialog-close{position:absolute;right:5px;cursor:default;line-height:12px;font-size:36px;color:#777;top:10px;cursor:pointer}.ui-dialog-pop .ui-dialog-ft{background:#f0f0f0;padding:20px}.ui-dialog-pop .ui-dialog-ft .ui-dialog-button{margin-right:15px}.ui-dialog-pop .button{margin-right:15px}@font-face{font-family:fontello;src:url(/common/css/fontello.eot?36072971);src:url(/common/css/fontello.eot?36072971#iefix) format('embedded-opentype'),url(/common/css/fontello.woff?36072971) format('woff'),url(/common/css/fontello.ttf?36072971) format('truetype'),url(/common/css/fontello.svg?36072971#fontello) format('svg');font-weight:400;font-style:normal}[class^=icon-]:before,[class*=" icon-"]:before{font-family:fontello;font-style:normal;font-weight:400;speak:none;display:inline-block;text-decoration:inherit;width:1em;margin-right:.2em;text-align:center;font-variant:normal;text-transform:none;line-height:1em;margin-left:.2em}.animate-spin{-moz-animation:spin 5s infinite linear;-o-animation:spin 5s infinite linear;-webkit-animation:spin 5s infinite linear;animation:spin 5s infinite linear;display:inline-block}@-moz-keyframes spin{0%{-moz-transform:rotate(0deg);-o-transform:rotate(0deg);-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-moz-transform:rotate(359deg);-o-transform:rotate(359deg);-webkit-transform:rotate(359deg);transform:rotate(359deg)}}@-webkit-keyframes spin{0%{-moz-transform:rotate(0deg);-o-transform:rotate(0deg);-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-moz-transform:rotate(359deg);-o-transform:rotate(359deg);-webkit-transform:rotate(359deg);transform:rotate(359deg)}}@-o-keyframes spin{0%{-moz-transform:rotate(0deg);-o-transform:rotate(0deg);-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-moz-transform:rotate(359deg);-o-transform:rotate(359deg);-webkit-transform:rotate(359deg);transform:rotate(359deg)}}@-ms-keyframes spin{0%{-moz-transform:rotate(0deg);-o-transform:rotate(0deg);-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-moz-transform:rotate(359deg);-o-transform:rotate(359deg);-webkit-transform:rotate(359deg);transform:rotate(359deg)}}@keyframes spin{0%{-moz-transform:rotate(0deg);-o-transform:rotate(0deg);-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-moz-transform:rotate(359deg);-o-transform:rotate(359deg);-webkit-transform:rotate(359deg);transform:rotate(359deg)}}.icon-cab:before{content:'\e800'}.icon-home-outline:before{content:'\e801'}.icon-tools:before{content:'\e802'}.icon-user:before{content:'\e803'}.icon-mail:before{content:'\e804'}.icon-right-open:before{content:'\e805'}.icon-attention-circled:before{content:'\e806'}.icon-location-outline:before{content:'\e807'}.icon-search:before{content:'\e808'}.icon-pencil:before{content:'\e809'}.icon-trash-empty:before{content:'\e80a'}.icon-spin5:before{content:'\e80b'}.icon-file-excel:before{content:'\e80c'}.icon-ok-circled:before{content:'\e80d'}.icon-user-1:before{content:'\e80e'}.icon-lock-1:before{content:'\e80f'}.icon-clock:before{content:'\e810'}div.alert-box-pop{position:fixed;left:50%;padding-right:15px;font-weight:400;opacity:.9;z-index:5000}.ui-pager ul{margin:30px 0;list-style:none;display:inline-block;overflow:hidden;border-left:1px solid #DDD;*display:inline;*zoom:1;-webkit-box-shadow:0 1px 2px rgba(0,0,0,.1);-moz-box-shadow:0 1px 2px rgba(0,0,0,.1);box-shadow:0 1px 2px rgba(0,0,0,.1);-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px}.ui-pager ul li{display:inline}.ui-pager ul li a{float:left;padding:5px 12px;line-height:20px;color:#333;border:1px solid #ddd;border-left:0}.ui-pager ul li.active a,.ui-pager ul li.disabled a{color:#9d9f9c;cursor:default;background:#f5f5f5;text-decoration:none}body{font-family:'Microsoft YaHei',sans-serif;background-color:rgba(255,255,255,.95)}body a{font-size:14px;text-decoration:none;color:#333}body a:hover{color:#e63939}input{border-radius:0;background-color:#fff;border:1px solid gray;box-shadow:inset 0 1px 2px rgba(0,0,0,.1);padding:2px 5px;-webkit-transition:'border-color 0.15s linear, background 0.15s linear';-moz-transition:'border-color 0.15s linear, background 0.15s linear';-o-transition:'border-color 0.15s linear, background 0.15s linear';transition:'border-color 0.15s linear, background 0.15s linear'}input:focus{background:#fafafa;border-color:#999;outline:0}.e5{color:#e5e5e5}.grid{width:1185px;margin:0 auto;*zoom:1}.grid:before,.grid:after{display:table;line-height:0;content:""}.grid:after{clear:both}.clearfix{*zoom:1}.clearfix:before,.clearfix:after{display:table;content:"";line-height:0}.clearfix:after{clear:both}.tl{text-align:left}.tc{text-align:center}.tr{text-align:right}.bc{margin-left:auto;margin-right:auto}.fl{float:left;display:inline}.fr{float:right;display:inline}.cb{clear:both}.cl{clear:left}.cr{clear:right}.vm{vertical-align:middle}.pr{position:relative}.pa{position:absolute}.abs-right{position:absolute;right:0}.zoom{zoom:1}.hide{display:none}.hidden{visibility:hidden}.none{display:none}.parsley-errors-list{margin-top:-1px}.parsley-errors-list li{padding:2px 5px;line-height:2em;color:#cc334c;font-size:.6em}.parsley-error{background:#fff0f0;border-color:#dbb1b1;color:#d95c5c;border-color:#cc334c}.parsley-success{background-color:#eeffe7;color:#3c763d;border-color:#bedebe}.header{border-bottom:1px solid rgba(0,0,0,.1)}.header .h-top{height:50px;line-height:50px}.header .h-top .logo{background:url(/common/img/logo_9f65e42.png) 0 11px no-repeat;width:126px;height:50px;display:block}.header .h-top .info .search .po-img{left:-28px;top:5px;position:relative;cursor:pointer}.header .h-top .info .search input{padding:0;border:0;height:32px;width:0;outline:0;background-color:#f0f0f0}.header .h-top .info .contact,.header .h-top .info .register,.header .h-top .info .login{display:block;padding:0 15px}.footer{background-color:#2e3133;height:420px}.footer .f-info ul .mr260{margin-right:260px}.footer .f-info ul .mr100{margin-right:100px}.footer .f-info ul .mb15{margin-bottom:15px}.footer .f-info ul li{float:left;width:160px;margin-top:70px}.footer .f-info ul li h3{color:#b3b3b3;font-weight:400;font-size:18px}.footer .f-info ul li .u-l-red{width:34px;height:3px;background-color:#e63939;margin-top:10px;margin-bottom:30px}.footer .f-info ul li p a{color:#666}.footer .f-info ul li p a:hover{color:#fff;text-decoration:underline}.footer .f-line{margin-top:80px}.footer .f-logo{text-align:center;position:relative;top:-20px}.footer .f-signature{text-align:center;color:#666;font-size:14px}.footer .f-signature span{margin-right:10px}.footer .f-signature a{color:#666}
