--- a/_layouts/fe.html
+++ b/_layouts/fe.html
@@ -10,6 +10,9 @@
     <link href="resource/common.css" rel="stylesheet">
     <link href="resource/fontello.css" rel="stylesheet">
     {{ page.extcss }}
+    <script>
+        var IOT = {};
+    </script>
 </head>
 <body>
 
