Update some words and images.

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -26,7 +26,7 @@
 
     <div id="title" class="step" data-x="-1000" data-y="-1000" data-scale="5" style="z-index:2;">
         <q><strong>OneNET前端研发团队</strong></q>
-        <img src="resource/img/team.jpg" alt="" style="width: 100%;"/>
+        <img src="resource/img/team.jpg" alt="" style="width: 70%;"/>
     </div>
 
     <div id="data" class="step" data-x="500" data-y="-1000">
@@ -57,20 +57,20 @@
     <div id="project_chip" class="step" data-x="800" data-y="-1200" data-z="-3000" data-rotate="400" data-scale="0.1">
         <p><b style="font-size: 60px;">沈阳大悦城</b></p>
         <br/>
-        <img src="resource/img/dyc0.png" alt="" style="width: 60%;"/>
-        <img src="resource/img/dyc001.jpg" alt="" style="width: 60%;"/>
+        <img src="resource/img/dyc0.png" alt="" style="width: 50%;display: inline-block;float: left;"/>
+        <img src="resource/img/dyc001.jpg" alt="" style="width: 50%;"/>
     </div>
 
     <div id="project_dyc1" class="step" data-x="600" data-y="-1200" data-z="-3000" data-rotate="300" data-scale="0.1">
         <p><b style="font-size: 60px;">大悦城 环境检测</b></p>
         <br/>
-        <img src="resource/img/dyc1.jpg" alt="" style="width: 90%;"/>
+        <img src="resource/img/dyc1.jpg" alt="" style="width: 65%;"/>
     </div>
 
     <div id="project_dyc2" class="step" data-x="700" data-y="-1300" data-z="-3000" data-rotate="300" data-scale="0.1">
         <p><b style="font-size: 60px;">大悦城 一号电井监管</b></p>
         <br/>
-        <img src="resource/img/dyc2.png" alt="" style="width: 90%;"/>
+        <img src="resource/img/dyc2.png" alt="" style="width: 65%;"/>
     </div>
 
     <div id="project_dyc3" class="step" data-x="1000" data-y="0" data-rotate="90">
@@ -99,7 +99,7 @@
 
     <div id="app_editor" class="step" data-x="0" data-y="0" data-rotate="90">
         <p style="font-size: 33px;">以上的例子都是基于我们的OneNET平台，基于我们的应用编辑器--为客户提供最便捷的方式，OneNET首推的物联网平台应用编辑器，形成了OneNET区别于其它云平台的核心竞争力。</p>
-        <img src="resource/img/app_editor.png" alt="" style="width: 100%;"/>
+        <img src="resource/img/app_editor.png" alt="" style="width: 80%;"/>
     </div>
 
     <div id="project_indp" class="step" data-x="0" data-y="0" data-z="-3000" data-rotate="300" data-scale="0.05">
@@ -136,19 +136,19 @@
         <ul>
             <li>
                 <h3>茶园监控</h3>
-                <img src="resource/img/chayuan.png" alt=""  style="width: 100%;"/>
+                <img src="resource/img/chayuan.png" alt=""  style="width: 83%;"/>
             </li>
             <li>
                 <h3>楚邦雷电</h3>
-                <img src="resource/img/chubang.png" alt=""  style="width: 100%;"/>
+                <img src="resource/img/chubang.png" alt=""  style="width: 80%;"/>
             </li>
             <li>
                 <h3>OneNET数据迁徙</h3>
-                <img src="resource/img/OneNETqianxi.png" alt=""  style="width: 100%;"/>
+                <img src="resource/img/OneNETqianxi.png" alt=""  style="width: 84%;"/>
             </li>
             <li>
                 <h3>OneNET热力图</h3>
-                <img src="resource/img/OneNETheat.png" alt=""  style="width: 100%;"/>
+                <img src="resource/img/OneNETheat.png" alt=""  style="width: 80%;"/>
             </li>
         </ul>
     </div>
@@ -156,20 +156,20 @@
     <div id="project_robot" class="step" data-x="0" data-y="2000">
         <p><b style="font-size: 60px;">乐高机器人</b></p>
         <ul>
-            <li><img src="resource/img/robot1.png" alt="" style="width: 100%;"/></li>
-            <li><img src="resource/img/robot2.jpg" alt="" style="width: 100%;"/></li>
+            <li><img src="resource/img/robot1.png" alt="" style="width: 80%;"/></li>
+            <li><img src="resource/img/robot2.jpg" alt="" style="width: 88%;"/></li>
             <li class="third"><img src="resource/img/robot3.jpg" alt="" style="width: 100%;"/></li>
         </ul>
     </div>
 
     <div id="project_ioteams" class="step" data-x="1800" data-y="1000" data-rotate="90" data-scale="0.02">
-        <p><b style="font-size: 60px;">为了公司的发展壮大，我们精益求精，力臻完美，开发了公司的招聘首页</b></p>
+        <p><b style="font-size: 52px;">为了公司的发展壮大，我们精益求精，力臻完美，开发了公司的招聘首页</b></p>
         <img src="resource/img/onenetjob.png" alt="" style="width: 100%;"/>
     </div>
 
     <div id="project_english" class="step" data-x="1800" data-y="1000" data-rotate="90">
         <p><b style="font-size: 40px;">一封远洋邮件，我们开始了OneNET英文版的开发，现已正式上线，正式开启了与国外合作的大门</b></p>
-        <img src="resource/img/OneNETEnglish.png" alt="" style="width: 100%;"/>
+        <img src="resource/img/OneNETEnglish.png" alt="" style="width: 80%;"/>
     </div>
 
     <div id="project_other" class="step" data-x="-500" data-y="1000">
@@ -184,6 +184,16 @@
             <li>BBS用户分享反馈</li>
             <li>...</li>
         </ul>
+    </div>
+
+    <div id="training" class="step" data-x="-1500" data-y="1000" data-rotate="90" data-scale="0.1">
+        <p><b style="font-size: 60px;">涛哥分享精神</b></p>
+        <img src="resource/img/training.jpg" alt="" style="width: 80%;"/>
+    </div>
+
+    <div id="like" class="step" data-x="-1200" data-y="1000" data-rotate="90" data-scale="0.2">
+        <p><b style="font-size: 60px;">群里相关人士赞扬</b></p>
+        <img src="resource/img/like.png" alt="" style="width: 100%;"/>
     </div>
 
     <div id="team_happy" class="step" data-x="-1500" data-y="1000">
