Update some words.

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -97,7 +97,7 @@
         <img src="resource/img/zmkg.png" alt="" style="width: 90%;"/>
     </div>
 
-    <div id="app_editor" class="step" data-x="0" data-y="0" data-rotate="90">
+    <div id="app_editor" class="step" data-x="0" data-y="0" data-rotate="90" data-scale="0.2">
         <p style="font-size: 33px;">以上的例子都是基于我们的OneNET平台，基于我们的应用编辑器--为客户提供最便捷的方式，OneNET首推的物联网平台应用编辑器，形成了OneNET区别于其它云平台的核心竞争力。</p>
         <img src="resource/img/app_editor.png" alt="" style="width: 80%;"/>
     </div>
