Update some words and some images.

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -54,6 +54,12 @@
         </ul>
     </div>
 
+    <div id="app_editor" class="step" data-x="50" data-y="-800" data-z="-3000" data-rotate="90" data-scale="0.1">
+        <q><strong style="font-size: 60px;">OneNET应用编辑器</strong></q>
+        <p style="font-size: 30px;">应用编辑器是OneNET前端团队自主研发的一个设备监控系统生成器，并已生成上万个设备监控系统。OneNET应用编辑器是业界首创，形成了OneNET区别于其它云平台的核心竞争力。</p>
+        <img src="resource/img/app_editor.png" alt="" style="width: 70%;"/>
+    </div>
+
     <div id="project_chip" class="step" data-x="800" data-y="-1200" data-z="-3000" data-rotate="400" data-scale="0.1">
         <p><b style="font-size: 60px;">沈阳大悦城</b></p>
         <br/>
@@ -97,10 +103,10 @@
         <img src="resource/img/zmkg.png" alt="" style="width: 90%;"/>
     </div>
 
-    <div id="app_editor" class="step" data-x="0" data-y="0" data-rotate="90" data-scale="0.2">
-        <p style="font-size: 33px;">以上的例子都是基于我们的OneNET平台，基于我们的应用编辑器--为客户提供最便捷的方式，OneNET首推的物联网平台应用编辑器，形成了OneNET区别于其它云平台的核心竞争力。</p>
-        <img src="resource/img/app_editor.png" alt="" style="width: 80%;"/>
-    </div>
+    <!--<div id="app_editor" class="step" data-x="0" data-y="0" data-rotate="90" data-scale="0.2">-->
+    <!--<p style="font-size: 33px;">以上的例子都是基于我们的OneNET平台，基于我们的应用编辑器&#45;&#45;为客户提供最便捷的方式，OneNET首推的物联网平台应用编辑器，形成了OneNET区别于其它云平台的核心竞争力。</p>-->
+    <!--<img src="resource/img/app_editor.png" alt="" style="width: 80%;"/>-->
+    <!--</div>-->
 
     <div id="project_indp" class="step" data-x="0" data-y="0" data-z="-3000" data-rotate="300" data-scale="0.05">
         <p><b style="font-size: 60px;">除了我们的应用编辑器，我们还做了很多基于OneNET平台的端到端项目：</b></p>
@@ -162,10 +168,15 @@
         </ul>
     </div>
 
-    <div id="project_ioteams" class="step" data-x="1800" data-y="1000" data-rotate="90" data-scale="0.02">
-        <p><b style="font-size: 52px;">为了公司的发展壮大，我们精益求精，力臻完美，开发了公司的招聘首页</b></p>
-        <img src="resource/img/onenetjob.png" alt="" style="width: 100%;"/>
+    <div id="project_robot_more" class="step" data-x="800" data-y="1000">
+        <p><b style="font-size: 60px;">高交会上的Robot</b></p>
+        <img src="resource/img/robot.png" alt="" style="width: 42%;"/>
     </div>
+
+    <!--<div id="project_ioteams" class="step" data-x="1800" data-y="1000" data-rotate="90" data-scale="0.02">-->
+    <!--<p><b style="font-size: 52px;">为了公司的发展壮大，我们精益求精，力臻完美，开发了部门的招聘首页</b></p>-->
+    <!--<img src="resource/img/onenetjob.png" alt="" style="width: 100%;"/>-->
+    <!--</div>-->
 
     <div id="project_english" class="step" data-x="1800" data-y="1000" data-rotate="90">
         <p><b style="font-size: 40px;">一封远洋邮件，我们开始了OneNET英文版的开发，现已正式上线，正式开启了与国外合作的大门</b></p>
@@ -187,7 +198,12 @@
     </div>
 
     <div id="training" class="step" data-x="-1500" data-y="1000" data-rotate="90" data-scale="0.1">
-        <p><b style="font-size: 60px;">涛哥分享精神</b></p>
+        <p><b style="font-size: 60px;">Team Sharing</b></p>
+        <img src="resource/img/team_sharing.jpg" alt="" style="width: 80%;"/>
+    </div>
+
+    <div id="taoge_training" class="step" data-x="-1800" data-y="1000" data-rotate="90" data-scale="0.1">
+        <p><b style="font-size: 60px;">技术人员输出</b></p>
         <img src="resource/img/training.jpg" alt="" style="width: 80%;"/>
     </div>
 
@@ -196,7 +212,12 @@
         <img src="resource/img/like.png" alt="" style="width: 100%;"/>
     </div>
 
-    <div id="team_happy" class="step" data-x="-1500" data-y="1000">
+    <div id="project_ioteams" class="step"  data-x="-800" data-y="1000" data-rotate="180" data-scale="0.01">
+        <p><b style="font-size: 52px;">为了公司的发展壮大，我们精益求精，力臻完美，开发了部门的招聘首页</b></p>
+        <img src="resource/img/onenetjob.png" alt="" style="width: 100%;"/>
+    </div>
+
+    <div id="team_happy" class="step" data-x="-2000" data-y="1000">
         <p><b style="font-size: 60px;">重点来了！</b></p>
     </div>
 
